use stills and scrolling is fixed on mobile

--- a/src/css/modules/_ingredients.scss
+++ b/src/css/modules/_ingredients.scss
@@ -95,7 +95,9 @@
     }
 
     .is-expandable &:hover {
-        background-color: darken($c-pink, 2%);
+        @include mq($until: desktop) {
+            background-color: darken($c-pink, 2%);
+        }
     }
 }
 
