--- a/src/css/modules/_steps.scss
+++ b/src/css/modules/_steps.scss
@@ -20,16 +20,6 @@
     }
 }
 
-/*
-.recipe-step--1 {
-    background-image: url("@@assetPath@@/assets/step1small.gif");
-}
-*/
-
-.recipe-step--6 {
-    background-image: url("@@assetPath@@/assets/step6.gif");
-}
-
 .recipe-step__content {
     background-color: white;
     border-top: 1px solid $c-purple;
